# Nitegame-Engine

./: .gitignore  LICENSE  README.md  README.txt  build.bat  pyproject.toml  scratch_notes.txt  setup.cfg  upload.bat
nitegame.egg-info/: PKG-INFO  SOURCES.txt
src/: core.py
src/nitegame/: __init__.py  codekit.py  core.py  features.py
src/nitegame.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: perlin_noise_test.py  test_display.py  test_gui.py  test_inputmanager.py  test_pgdisplay.py
tests/core/: test_draw.py  test_gldisplay.py  test_inputmanager.py  test_pgdisplay.py
tests/core/shaders/: basic_fragment_shader.glsl  basic_vertex_shader.glsl  crt_fragment_shader.glsl  default_vertex_shader.glsl  play_fragment_shader.glsl  play_vertex_shader.glsl
tests/features/: test_gui.py
tests/opengl/: test_dfpshaders.py  test_opengl.py  test_textures.py
tests/opengl/dfp_shaderlib/: pygameoglw.py  shaderlib.py
