# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel", "pygame"]
build-backend = "setuptools.build_meta"

[project]
name = "nitegame"
version = "0.0.20"
description = "A game engine built on Pygame & ModernGL meant to simplify common game systems, and the process of developing, primarily, 2D games."
readme = "README.md"
authors = [{ name = "Zachery Visger", email = "niteboundx@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["tools", "engine", "game", "pygame", "opengl", "moderngl", "2D"]
dependencies = [
    "pygame",
    "numpy",
    "pytmx"
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["pip-tools"]

[project.urls]
Homepage = "https://github.com/Nitebound/Nitegame-Engine"

[project.scripts]
# realpython = "reader.__main__:main"