[metadata]
name = nite-game
version = 0.0.1
author = Zachery Visger
author_email = niteboundx@gmail.com
description = A game engine for 2D, top-down perspective games. Made with Pygame!
long_description = file: README.md
long_description_content_type = text/markdown
url = nite
project_urls =
    Bug Tracker = package issues url
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src